--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "tailwindcss": "^3",
     "vue": "^2.6.14",
     "vue-emoji-picker": "^1.0.3",
+    "vue-material-design-icons": "^5.1.2",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
