--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "postcss": "^8",
     "tailwindcss": "^3",
     "vue": "^2.6.14",
+    "vue-context-menu": "^2.0.6",
     "vue-emoji-picker": "^1.0.3",
     "vue-material-design-icons": "^5.1.2",
     "vue-router": "^3.5.1",
